@@ -23,3 +23,4 @@ Redis                           = 1.955
 [Prereqs / TestRequires]
 Test::More                      = 0.98
 Test::Pod                       = 1.22
+Test::Exception                 = 0
